--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -45,3 +45,4 @@ jobs:
           SUPER_USER_NAME: admin
           SUPER_USER_EMAIL: admin@example.com
           SUPER_USER_PASSWORD: password
+          EMAIL_PREVENT: true
