--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -46,3 +46,4 @@ jobs:
           SUPER_USER_EMAIL: admin@example.com
           SUPER_USER_PASSWORD: password
           EMAIL_PREVENT: true
+          JWT_SECRET: secret
