--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -41,7 +41,8 @@ jobs:
           DB_PASSWORD: postgres
           DB_DATABASE: postgres
           DB_DEBUG: false
-          STORAGE_PATH_PREFIX: ./
+          STORAGE_PATH_PREFIX: ./homework
+          TEMP_PATH_PREFIX: ./tmp
           SUPER_USER_NAME: admin
           SUPER_USER_EMAIL: admin@example.com
           SUPER_USER_PASSWORD: password
